initial OSM POST endpoint

--- a/services/src/test/resources/application.properties
+++ b/services/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.de.yard.owm.services.osm=DEBUG
+logging.level.de.yard.owm.services=DEBUG
 #logging.level.org.springframework.security=debug
 
 # By default, Spring Boot configures the application to connect to an in-memory store with the
