Basic OsmService added

--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
 spring.data.rest.base-path=mazes
+
+# modules configuration. Derived from configuration-poc.properties and configuration-base.properties
+# 27.5.19 Bridges are in HighwayModule for now
+modules=WaterModule,RailwayModule,HighwayModule,SurfaceAreaModule,AerowayModule
+
+
