--- a/services/src/main/resources/config/configuration-base.properties
+++ b/services/src/main/resources/config/configuration-base.properties
@@ -7,7 +7,7 @@ usePoly2Tri=true
 drawdetails=true
 
 #
-# modules
+# modules (26.3.24 deprecated here,moved to application.properties)
 Die Klassen gehören alle hier hin, enabled sind aber nur die grundlegenden
 #
 #9.4.19modules.GraphModule.class=de.yard.threed.osm2graph.osm.modules.GraphModule
