--- a/services/src/test/resources/application.properties
+++ b/services/src/test/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
 spring.data.rest.base-path=mazes
+
+modules=WaterModule,RailwayModule,HighwayModule,SurfaceAreaModule,AerowayModule
