--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 
-spring.flyway.schemas=mazes
-spring.jpa.properties.hibernate.default_schema=mazes
+spring.flyway.schemas=worldmesh
+spring.jpa.properties.hibernate.default_schema=worldmesh
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
