--- a/services/src/test/resources/application.properties
+++ b/services/src/test/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.de.yard.owm.services=DEBUG
 
 # By default, Spring Boot configures the application to connect to an in-memory store with the
 # username sa and an empty password.
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;INIT=CREATE SCHEMA IF NOT EXISTS mazes\\;SET SCHEMA mazes;
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;INIT=CREATE SCHEMA IF NOT EXISTS worldmesh\\;SET SCHEMA worldmesh;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 #spring.datasource.password=password
@@ -14,11 +14,11 @@ spring.datasource.username=sa
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.flyway.schemas=mazes
 
-spring.jpa.properties.hibernate.default_schema=mazes
+spring.jpa.properties.hibernate.default_schema=worldmesh
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
-spring.data.rest.base-path=mazes
+#spring.data.rest.base-path=mazes
 
 modules=WaterModule,RailwayModule,HighwayModule,SurfaceAreaModule,AerowayModule
