--- a/services/src/test/resources/application.properties
+++ b/services/src/test/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.properties.hibernate.default_schema=worldmesh
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
 
 #spring.data.rest.base-path=mazes
 
