SceneryContext reactivated for 2024 design, real postgres for tests, persistence for OSM data

--- a/services/src/test/resources/application.properties
+++ b/services/src/test/resources/application.properties
@@ -1,20 +1,20 @@
 logging.level.de.yard.owm.services=DEBUG
 #logging.level.org.springframework.security=debug
+#logging.level.org.hibernate=debug
 
 # By default, Spring Boot configures the application to connect to an in-memory store with the
 # username sa and an empty password.
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;INIT=CREATE SCHEMA IF NOT EXISTS worldmesh\\;SET SCHEMA worldmesh;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-#spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/worldmesh?currentSchema=worldmesh_test;
+spring.datasource.username=worldmesh
+spring.datasource.password=worldmesh
 
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.H2
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.flyway.schemas=mazes
+spring.flyway.schemas=worldmesh_test
 
-spring.jpa.properties.hibernate.default_schema=worldmesh
+spring.jpa.properties.hibernate.default_schema=worldmesh_test
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
