--- a/services/pom.xml
+++ b/services/pom.xml
@@ -194,12 +194,18 @@
             <scope>test</scope>
             <version>2.7.10</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>test</scope>
             <version>2.1.210</version>
-        </dependency>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>org.flywaydb.flyway-test-extensions</groupId>
+            <artifactId>flyway-spring-test</artifactId>
+            <version>8.4.4</version>
+            <scope>test</scope>
+        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
@@ -246,7 +252,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.12.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>17</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -262,6 +268,20 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-maven-plugin -->
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>8.4.4</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/worldmesh</url>
+                    <user>worldmesh</user>
+                    <password>worldmesh</password>
+                    <schemas>
+                        <schema>worldmesh_test</schema>
+                    </schemas>
+                </configuration>
             </plugin>
         </plugins>
     </build>
